# budilnik

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
jsons/2025-06-09/: 14-06-19.json
src/: app.rs  config.rs  data.rs  http.rs  main.rs  ui.rs
