[package]
name = "budilnik"
version = "0.1.0"
edition = "2024"

[dependencies]
serde={version = "1.0.219",features = ["derive"]}
serde_json = {version = "1.0.140",features = ["default"]}
tokio={version = "1.45.1",features = ["full"]}
crossterm={version = "0.29.0"}
ratatui={version = "0.29.0"}
anyhow={version = "1.0.98"}
reqwest={version = "0.12.19"}
chrono = {version = "0.4.41"}